<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="46dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginBottom="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sanity_logo"/>

        <!-- Username Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/colorTextLight">
            <EditText android:id="@+id/username_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@string/input_length"
                android:inputType="text"
                android:hint="@string/login_username_label"
                android:textColor="@color/colorTextLight"
                android:backgroundTint="@color/colorTextLight"
                />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/colorTextLight">
            <EditText android:id="@+id/password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@string/input_length"
                android:inputType="textPassword"
                android:hint="@string/login_password_label"
                android:textColor="@color/colorTextLight"
                android:backgroundTint="@color/colorTextLight"
                />
        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="0dp"
            android:padding="12dp"
            android:text="@string/login_login_button_label"
            android:textColor="@color/colorTextLight"
            android:background="@color/colorPrimaryDark"/>

        <!-- Sign Up Button -->
        <TextView
            android:id="@+id/signup_link"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:gravity="center"
            android:text="@string/login_sign_up_button_label"
            android:textColor="@color/colorTextLight" />

        <!-- Forgot Password Button -->
        <TextView
            android:id="@+id/forgot_password_link"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/login_forgot_password_button_label"
            android:textColor="@color/colorTextLight" />


        <!--<TextView android:id="@+id/link_signup"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="24dp"-->
            <!--android:text="No account yet? Create one"-->
            <!--android:gravity="center"-->
            <!--android:textSize="16dip"/>-->

    </LinearLayout>
</ScrollView>