...
        android:paddingTop="@dimen/row_padding_size"
        android:paddingBottom="@dimen/row_padding_size"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/placeholder"
        />

    <ListView android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbarStyle="outsideOverlay"
        android:dividerHeight="@dimen/budget_screen_divider_height"
        android:divider="@null"
...
