...
            />

        <!--
            Button to open settings of the specicategorydget
        -->
        <ImageButton
            android:id="@+id/settings_button"
            android:layout_width="@dimen/button_height"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_settings_black_24dp"
            android:tint="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimaryLight"
...
